--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv-webpack": "^2.0.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.0",
+    "eslint-plugin-fp": "^2.3.0",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
